--- a/index.html
+++ b/index.html
@@ -1,173 +1,152 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>記憶相簿</title>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: 'Noto Sans TC', sans-serif;
+      font-family: "Helvetica Neue", sans-serif;
       margin: 0;
-      padding: 0;
-      background-color: #fdfdfd;
+      background: #fdfcfc;
       color: #333;
     }
     header {
-      background-color: #ffffff;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
-      padding: 1rem 2rem;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      position: sticky;
-      top: 0;
-      z-index: 10;
+      background: linear-gradient(to right, #fbd3e9, #bbdff9);
+      padding: 2rem;
+      text-align: center;
+      color: #333;
     }
     header h1 {
+      font-size: 2.5rem;
       margin: 0;
-      font-size: 1.8rem;
     }
-    nav a {
-      margin-left: 1.2rem;
-      text-decoration: none;
-      color: #555;
-      transition: color 0.3s;
+    header p {
+      font-size: 1.2rem;
+      margin-top: 0.5rem;
     }
-    nav a:hover {
-      color: #0070f3;
-    }
-    .intro {
-      max-width: 800px;
-      margin: 3rem auto;
-      padding: 0 1rem;
-      text-align: center;
-    }
-    .intro h2 {
-      font-size: 2.2rem;
-      margin-bottom: 1rem;
-    }
-    .intro p {
-      font-size: 1.1rem;
-      line-height: 1.8;
-    }
-    .features {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 1.5rem;
+    main {
       max-width: 1000px;
       margin: 2rem auto;
       padding: 0 1rem;
+    }
+    .upload-section {
+      text-align: center;
+      margin-bottom: 2rem;
+    }
+    .upload-section input[type="file"] {
+      display: none;
+    }
+    .upload-label {
+      background: #ff9eb7;
+      color: white;
+      padding: 0.8rem 1.5rem;
+      border-radius: 20px;
+      cursor: pointer;
+      font-weight: bold;
+    }
+    .gallery {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+      gap: 1.5rem;
     }
     .card {
       background: white;
-      border-radius: 16px;
-      box-shadow: 0 6px 16px rgba(0, 0, 0, 0.06);
-      padding: 1.5rem;
-      transition: transform 0.3s;
+      border-radius: 15px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      overflow: hidden;
+      display: flex;
+      flex-direction: column;
     }
-    .card:hover {
-      transform: translateY(-5px);
+    .card img {
+      width: 100%;
+      object-fit: cover;
+      height: 200px;
     }
-    .card h3 {
-      margin-top: 0;
-      font-size: 1.4rem;
+    .card-content {
+      padding: 1rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
     }
-    .structure, .goals, .uiux {
-      max-width: 1000px;
-      margin: 2rem auto;
-      padding: 0 1rem;
+    .like-button {
+      font-size: 1.5rem;
+      color: gray;
+      cursor: pointer;
+      transition: color 0.3s;
     }
-    .structure h2, .goals h2, .uiux h2 {
-      text-align: center;
-      margin-bottom: 1rem;
-      font-size: 1.8rem;
-    }
-    .structure ul, .goals ul, .uiux ul {
-      line-height: 1.8;
-      padding-left: 1.2rem;
-    }
-    footer {
-      text-align: center;
-      padding: 2rem 1rem;
-      font-size: 0.9rem;
-      color: #999;
-      margin-top: 3rem;
+    .like-button.liked {
+      color: red;
     }
   </style>
 </head>
 <body>
   <header>
     <h1>記憶相簿</h1>
-    <nav>
-      <a href="#intro">關於</a>
-      <a href="#features">特色</a>
-      <a href="#structure">架構</a>
-      <a href="#goals">目標</a>
-      <a href="#uiux">設計</a>
-      <a href="#contact">聯絡</a>
-    </nav>
+    <p>這是一個簡潔美觀的照片分享網站，屬於你的私人相冊。</p>
   </header>
 
-  <section class="intro" id="intro">
-    <h2>你的私人影像故事牆</h2>
-    <p>這是一個簡單純粹的照片平台，讓喜歡攝影、生活紀錄的你，能夠上傳、分類並展示專屬回憶，無論是風景、旅行、人物還是日常，都能收藏在這個屬於你的記憶相簿中。</p>
-  </section>
+  <main>
+    <section class="upload-section">
+      <label for="upload" class="upload-label">📸 上傳照片</label>
+      <input type="file" id="upload" accept="image/*" />
+    </section>
 
-  <section class="features" id="features">
-    <div class="card">
-      <h3>📷 照片上傳與編輯</h3>
-      <p>支援即時預覽、裁剪、濾鏡與標籤功能，讓你的作品更出色。</p>
-    </div>
-    <div class="card">
-      <h3>👥 社交互動</h3>
-      <p>支援按讚、留言、追蹤、分享與即時通知，促進交流與靈感激盪。</p>
-    </div>
-    <div class="card">
-      <h3>🧭 探索與標籤</h3>
-      <p>透過主題標籤（如旅行、美食、寵物等）發掘更多精彩作品。</p>
-    </div>
-    <div class="card">
-      <h3>👤 個人化頁面</h3>
-      <p>包含使用者簡介、照片牆、收藏清單與動態更新，打造專屬空間。</p>
-    </div>
-  </section>
+    <section class="gallery" id="gallery">
+      <!-- 預設圖片卡片 -->
+    </section>
+  </main>
 
-  <section class="structure" id="structure">
-    <h2>網站架構</h2>
-    <ul>
-      <li><strong>index.html</strong>：首頁簡介與導航</li>
-      <li><strong>explore.html</strong>：探索熱門標籤與主題</li>
-      <li><strong>album.html</strong>：瀏覽使用者相簿</li>
-      <li><strong>upload.html</strong>：上傳與編輯照片</li>
-      <li><strong>profile.html</strong>：個人檔案與動態牆</li>
-      <li><strong>login.html / register.html</strong>：登入與註冊頁</li>
-      <li><strong>message.html</strong>：私訊與通知</li>
-    </ul>
-  </section>
+  <script>
+    const uploadInput = document.getElementById("upload");
+    const gallery = document.getElementById("gallery");
 
-  <section class="goals" id="goals">
-    <h2>網站主旨與目標</h2>
-    <ul>
-      <li>打造結合 Instagram、Pinterest、Threads 元素的照片社群平台</li>
-      <li>強調視覺吸引力與使用者互動性</li>
-      <li>讓用戶自由分享生活、建立影像故事、瀏覽靈感</li>
-      <li>無廣告、無干擾，回歸影像與人的連結</li>
-    </ul>
-  </section>
+    const presetImages = [
+      "https://picsum.photos/id/1018/400/300",
+      "https://picsum.photos/id/1015/400/300",
+      "https://picsum.photos/id/1016/400/300",
+      "https://picsum.photos/id/1019/400/300"
+    ];
 
-  <section class="uiux" id="uiux">
-    <h2>設計理念與風格</h2>
-    <ul>
-      <li>色彩乾淨、風格極簡，採用大量留白與卡片式排版</li>
-      <li>支援 RWD 響應式設計，手機操作友善</li>
-      <li>動態牆與探索頁主打圖片視覺呈現</li>
-      <li>用戶操作流程順暢，互動按鈕明確可見</li>
-    </ul>
-  </section>
+    function createCard(imgSrc, title = "我的照片") {
+      const card = document.createElement("div");
+      card.className = "card";
 
-  <footer id="contact">
-    <p>&copy; 2025 記憶相簿｜Build your memories, share your stories.</p>
-  </footer>
+      const image = document.createElement("img");
+      image.src = imgSrc;
+
+      const content = document.createElement("div");
+      content.className = "card-content";
+
+      const titleElem = document.createElement("div");
+      titleElem.textContent = title;
+
+      const like = document.createElement("span");
+      like.innerHTML = "&#10084;"; // ♥
+      like.className = "like-button";
+      like.onclick = () => like.classList.toggle("liked");
+
+      content.appendChild(titleElem);
+      content.appendChild(like);
+
+      card.appendChild(image);
+      card.appendChild(content);
+
+      gallery.prepend(card);
+    }
+
+    presetImages.forEach(url => createCard(url));
+
+    uploadInput.addEventListener("change", e => {
+      const file = e.target.files[0];
+      if (file) {
+        const reader = new FileReader();
+        reader.onload = function (evt) {
+          createCard(evt.target.result, "自上傳照片");
+        };
+        reader.readAsDataURL(file);
+      }
+    });
+  </script>
 </body>
 </html>
